# trafilatura_scrape

./: .gitignore  AGENTS.md  LICENSE  README.md  default.nix  flake.nix  pyproject.toml
.forgejo/workflows/: test.yml
tests/: __init__.py  test_server.py
trafilatura_scrape/: __init__.py  __main__.py  server.py
